fix archive invisible

--- a/assets/css/tagpage.css
+++ b/assets/css/tagpage.css
@@ -36,3 +36,11 @@
   padding-top:    4rem;
   padding-bottom: 2rem;
 }
+
+code.highligher-rouge 
+{
+    font-family: Source Sans Pro, Roboto Mono, Monaco, courier, monospace !important;
+    color: white;
+    background-color: #f8f8f8;
+ 
+}
